# hstest

./: CMakeLists.txt  README  hstest.cpp  hstest.h  hstest.kdev4  index.html  main.cpp  params.json
client/: CMakeLists.txt  dlgconfig.cpp  dlgconfig.h  dlgconfig.ui  dlgeditfonts.cpp  dlgeditfonts.h  dlgeditfonts.ui  dlgregister.cpp  dlgregister.h  dlgregister.ui  hstest-client.desktop  hstester-client.cpp  hstester-client.h  main.cpp  mainwindow.ui  report.cpp  report.h  reportview.cpp  reportview.h  reportview.ui  session.cpp  session.h  testmanager.cpp  testmanager.h  testthread.cpp  testthread.h  ui_dlgconfig.h  ui_mainwindow.h
client/help-browser/: helpbrowser.cpp  helpbrowser.h  helpform.ui
cmake/: win32-x-mingw32.cmake
docs/client/: index.html.in  quick_start.html  systems.html
server/: CMakeLists.txt  hstester-server.cpp  hstester-server.h  logfileout.cpp  logfileout.h  main.cpp  student.cpp  student.h  studentdb.cpp  studentdb.h  testmanager.cpp  testmanager.h  testserver.cpp  testserver.h  testthread.cpp  testthread.h
server/data/: testsdb.tst  ts35950.tst  ts52082.tst
server/resultview/: CMakeLists.txt  dlgselect.cpp  dlgselect.h  hstest-result.desktop  main.cpp  result_view.ui  resultview.cpp  resultview.h  select.ui
server/utils/: CMakeLists.txt  dlgaddbintest.cpp  dlgaddbintest.h  dlgaddbintest.ui  dlgaddtest.cpp  dlgaddtest.h  dlgaddtest.ui  dlgdeletetest.cpp  dlgdeletetest.h  dlgdeletetest.ui  dlgeditgroups.cpp  dlgeditgroups.h  dlgeditgroups.ui  dlgeditmarks.cpp  dlgeditmarks.h  dlgeditmarks.ui  dlgedittest.cpp  dlgedittest.h  dlgedittest.ui  hstestcfg.cpp  hstestcfg.desktop  hstestcfg.h  main.cpp  main_dialog.ui  testmanager.cpp  testmanager.h
share-src/: student.cpp  student.h  studentdb.cpp  studentdb.h  test.cpp  test.h  testcategories.cpp  testcategories.h  testdb.cpp  testdb.h  testnode.cpp  testnode.h
